add docker file

--- a/FRONT/medilabo/src/app/component/user/detail-patient/detail-patient.component.html
+++ b/FRONT/medilabo/src/app/component/user/detail-patient/detail-patient.component.html
@@ -24,7 +24,7 @@
     <span class="value">{{ user?.phoneNumber }}</span>
   </div>
   <div class="detail-item">
-    <button routerLink="/form-update-patient">Mettre à jour les informations</button>
+    <button routerlink="/form-update-patient">Mettre à jour les informations</button>
   </div>
 </div>
 <!--<div>
