--- a/FRONT/medilabo/src/app/pages/form-add-patient/form-add-patient.component.html
+++ b/FRONT/medilabo/src/app/pages/form-add-patient/form-add-patient.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<!--<div class="container">
   <h2>Add New Patient</h2>
   <form (ngSubmit)="addUser()" #userForm="ngForm">
     <div class="form-group">
@@ -32,3 +32,4 @@
     <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
   </form>
 </div>
+-->
