--- a/FRONT/medilabo/src/app/pages/home/home.component.html
+++ b/FRONT/medilabo/src/app/pages/home/home.component.html
@@ -1,3 +1,4 @@
 <div class="home-container">
   <app-patient-form></app-patient-form>
+  <button (click)="redirectToAddPatient()">Ajouter un patient</button>
 </div>
