--- a/FRONT/medilabo/src/app/pages/patient-details/patient-details.component.html
+++ b/FRONT/medilabo/src/app/pages/patient-details/patient-details.component.html
@@ -1,9 +1,10 @@
 <div>
   <app-patient-details ></app-patient-details>
 </div>
-<div>
+<!--<div>
   <app-notes-patient ></app-notes-patient>
 </div>
 <div>
   <app-status-patient></app-status-patient>
 </div>
+-->
