--- a/FRONT/medilabo/src/app/pages/patient-form-add/patient-form-add.component.html
+++ b/FRONT/medilabo/src/app/pages/patient-form-add/patient-form-add.component.html
@@ -15,9 +15,8 @@
     <div>
       <label for="gender">Genre:</label>
       <select id="gender" formControlName="gender">
-        <option value="Male">Homme</option>
-        <option value="Female">Femme</option>
-        <option value="Other">Autre</option>
+        <option value="Male">H</option>
+        <option value="Female">F</option>
       </select>
     </div>
     <div>
